fix: navigation covered with a gradation layer

--- a/src/themes/custom.css
+++ b/src/themes/custom.css
@@ -52,7 +52,11 @@
     position: absolute;
     height: 45px !important;
     border-bottom: 1px solid var(--rs-color-border-neutral-faded);
-    z-index: 10;
+    z-index: 90;
+  }
+
+  .ct--article-gradient {
+    top: 45px;
   }
 }
 
